--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 body { font-family: Arial; background:#f2f2f2; margin:0; padding:0; }
 .card { max-width:500px; margin:50px auto; padding:20px; background:#fff; border-radius:10px; box-shadow:0 4px 10px rgba(0,0,0,0.1);}
 h2{margin-top:0;}
-.read-zone { padding:15px; background:#fff; border-left:4px solid #ffb700; border-radius:6px; }
+.read-zone { padding:15px; background:#fff; border-left:4px solid #ffb700; border-radius:6px; min-height:50px; }
 .word { display:inline-block; margin:0 2px; padding:2px 2px; background:#f0f0f0; border-radius:3px; color:#000; }
 .word.read { background:#ffd966; }
 #volumeCircle { width:50px; height:50px; border-radius:50%; background:#ffd966; transform:scale(0); transition:transform 0.05s linear; margin:0 auto 15px; display:block; }
@@ -20,8 +20,8 @@ button:disabled { background:#aaa; cursor:not-allowed; }
 <body>
 
 <div class="card">
-<h2>Rules & Agreement</h2>
-<p>Please read aloud. Words will be highlighted as you speak.</p>
+<h2>Rules & Agreement 9</h2>
+<p>Please read aloud. Words will highlight as you speak.</p>
 
 <div id="volumeCircle"></div>
 <div class="read-zone" id="readZone"></div>
@@ -31,7 +31,6 @@ button:disabled { background:#aaa; cursor:not-allowed; }
 
 <script>
 document.addEventListener("DOMContentLoaded", () => {
-  // Simplified text for easier recognition
   const text = `Please read these rules carefully. By using this service, you agree to follow all rules and respect other users. Your information may be saved to improve your experience. Always be honest and polite. Thank you for cooperating.`;
 
   const readZone = document.getElementById("readZone");
@@ -52,35 +51,41 @@ document.addEventListener("DOMContentLoaded", () => {
   let recognition,audioContext,analyser,microphone,dataArray;
 
   startBtn.addEventListener("click", async ()=>{
-    // Request microphone access
+    startBtn.disabled = true;
+
+    // Request microphone inside click
     let stream;
     try { 
       stream = await navigator.mediaDevices.getUserMedia({audio:true}); 
     } catch(e){ 
       alert("Microphone access required."); 
+      startBtn.disabled = false;
       return; 
     }
-    startBtn.disabled = true;
 
     // Volume circle
-    audioContext = new (window.AudioContext||window.webkitAudioContext)();
-    microphone = audioContext.createMediaStreamSource(stream);
-    analyser = audioContext.createAnalyser();
-    analyser.fftSize = 256;
-    microphone.connect(analyser);
-    dataArray = new Uint8Array(analyser.frequencyBinCount);
-    function animateVolume(){
-      analyser.getByteFrequencyData(dataArray);
-      let sum = 0; dataArray.forEach(v=>sum+=v);
-      const avg = sum / dataArray.length;
-      const scale = Math.min(1, avg/50);
-      volumeCircle.style.transform = `scale(${scale})`;
-      requestAnimationFrame(animateVolume);
+    try {
+      audioContext = new (window.AudioContext||window.webkitAudioContext)();
+      microphone = audioContext.createMediaStreamSource(stream);
+      analyser = audioContext.createAnalyser();
+      analyser.fftSize = 256;
+      microphone.connect(analyser);
+      dataArray = new Uint8Array(analyser.frequencyBinCount);
+      function animateVolume(){
+        analyser.getByteFrequencyData(dataArray);
+        let sum = 0; dataArray.forEach(v=>sum+=v);
+        const avg = sum / dataArray.length;
+        const scale = Math.min(1, avg/50);
+        volumeCircle.style.transform = `scale(${scale})`;
+        requestAnimationFrame(animateVolume);
+      }
+      animateVolume();
+    } catch(e){
+      console.error(e);
     }
-    animateVolume();
 
     // Speech recognition
-    if(!SpeechRecognition){ alert("Browser not supported."); return; }
+    if(!SpeechRecognition){ alert("Speech recognition not supported."); return; }
     recognition = new SpeechRecognition();
     recognition.continuous = true;
     recognition.interimResults = true;
@@ -108,4 +113,11 @@ document.addEventListener("DOMContentLoaded", () => {
       }
     };
 
-    recognition.
+    recognition.onerror=(e)=>{ console.error(e); alert("Speech recognition error. Check microphone permissions."); }
+    recognition.start();
+  });
+});
+</script>
+
+</body>
+</html>
