--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Voice Highlight with Live Transcript</title>
+<title>Voice Highlight with Status</title>
 <style>
 body { font-family: Arial; background:#f2f2f2; margin:0; padding:0; }
 .card { max-width:500px; margin:50px auto; padding:20px; background:#fff; border-radius:10px; box-shadow:0 4px 10px rgba(0,0,0,0.1);}
@@ -13,7 +13,7 @@ h2{margin-top:0;}
 .chunk.current { background:#ffd966; font-weight:bold; }
 .chunk.read { background:#ffe699; }
 #volumeCircle { width:50px; height:50px; border-radius:50%; background:#ffd966; transform:scale(0); margin:0 auto 15px; display:block; transition: transform 0.05s linear; }
-#liveTranscript { margin-top:15px; padding:10px; background:#e0e0e0; border-radius:6px; min-height:40px; font-style:italic; }
+#liveTranscript, #statusBox { margin-top:10px; padding:10px; background:#e0e0e0; border-radius:6px; min-height:40px; font-style:italic; overflow-wrap:break-word; }
 button { padding:10px; margin-top:10px; width:100%; background:#007bff; color:#fff; border:none; border-radius:6px; font-size:16px; cursor:pointer; }
 button:disabled { background:#aaa; cursor:not-allowed; }
 .agree { margin-top:20px; display:block; }
@@ -22,12 +22,13 @@ button:disabled { background:#aaa; cursor:not-allowed; }
 <body>
 
 <div class="card">
-<h2>Rules & Agreement 11</h2>
+<h2>Rules & Agreement</h2>
 <p>Read aloud. Current chunk is highlighted. Live transcript shows what the app hears.</p>
 
 <div id="volumeCircle"></div>
 <div class="read-zone" id="readZone"></div>
 <div id="liveTranscript">Your speech will appear here...</div>
+<div id="statusBox">Status messages will appear here...</div>
 <button id="startBtn">🎤 Start Reading</button>
 <label class="agree"><input type="checkbox" id="agree" disabled> I have read and understood the rules</label>
 </div>
@@ -45,6 +46,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
   const readZone = document.getElementById("readZone");
   const liveTranscriptDiv = document.getElementById("liveTranscript");
+  const statusBox = document.getElementById("statusBox");
   let currentChunk = 0;
 
   // Create span for each chunk
@@ -63,21 +65,27 @@ document.addEventListener("DOMContentLoaded", () => {
 
   const SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
   if(!SpeechRecognition){
-    alert("Your browser does not support Speech Recognition. Use Chrome.");
+    statusBox.textContent = "Your browser does not support Speech Recognition. Use Chrome.";
     startBtn.disabled = true;
     return;
   }
 
   let recognition, audioContext, analyser, microphone, dataArray;
 
+  function logStatus(msg){
+    statusBox.textContent = msg;
+  }
+
   startBtn.addEventListener("click", async () => {
+    logStatus("Start button clicked");
     startBtn.disabled = true;
 
     let stream;
     try {
       stream = await navigator.mediaDevices.getUserMedia({ audio: true });
+      logStatus("Microphone access granted");
     } catch(e){
-      alert("Microphone access required.");
+      logStatus("Microphone access denied or error: " + e.message);
       startBtn.disabled = false;
       return;
     }
@@ -106,6 +114,8 @@ document.addEventListener("DOMContentLoaded", () => {
     recognition.interimResults = true;
     recognition.lang='en-US';
 
+    recognition.onstart = () => logStatus("Recognition started");
+
     recognition.onresult = (event)=>{
       const transcript = Array.from(event.results)
         .map(r => r[0].transcript)
@@ -115,6 +125,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
       // Show live transcript
       liveTranscriptDiv.textContent = transcript;
+      logStatus("Transcript updated");
 
       const currentText = textChunks[currentChunk].toLowerCase().replace(/[^a-z ]/g,"");
       if(transcript.includes(currentText)){
@@ -127,14 +138,17 @@ document.addEventListener("DOMContentLoaded", () => {
         } else {
           checkbox.disabled = false;
           recognition.stop();
+          logStatus("All chunks read! Recognition stopped.");
         }
       }
     };
 
     recognition.onerror = (e)=>{
+      logStatus("Recognition error: " + e.error);
       console.error(e);
-      alert("Recognition error. Check microphone and use Chrome.");
     };
+
+    recognition.onend = () => logStatus("Recognition ended");
 
     recognition.start();
   });
