--- a/index.html
+++ b/index.html
@@ -3,162 +3,75 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Voice Terms Reader</title>
+<title>Voice-Controlled Slider</title>
 <style>
-body { font-family: Arial; background:#f2f2f2; margin:0; padding:0; transition: background 0.1s; }
-.card { max-width:600px; margin:50px auto; padding:20px; background:#fff; border-radius:10px; box-shadow:0 4px 10px rgba(0,0,0,0.1);}
-h2{margin-top:0;}
-.read-zone { padding:15px; background:#ffffff; color:#000000; border-left:4px solid #ffb700; border-radius:6px; min-height:50px; }
-.chunk { display:inline-block; margin:0 2px; padding:2px 2px; background:#f0f0f0; border-radius:3px; color:#000; font-size:16px; }
-.chunk.current { background:#ffd966; font-weight:bold; color:#000; }
-.chunk.read { background:#ffe699; color:#000; }
-#volumeCircle { width:50px; height:50px; border-radius:50%; background:#ffd966; transform:scale(0); margin:0 auto 15px; display:block; transition: transform 0.05s linear; }
-#liveTranscript, #statusBox { margin-top:10px; padding:10px; background:#e0e0e0; border-radius:6px; min-height:40px; font-style:italic; overflow-wrap:break-word; color:#000; }
-button { padding:10px; margin-top:10px; width:100%; background:#007bff; color:#fff; border:none; border-radius:6px; font-size:16px; cursor:pointer; }
-button:disabled { background:#aaa; cursor:not-allowed; }
-.agree { margin-top:20px; display:block; color:#000; }
+  body { font-family: sans-serif; text-align: center; padding: 50px; }
+  #slider { width: 80%; margin: 30px 0; }
+  button { padding: 10px 20px; font-size: 16px; margin: 5px; }
+  #savedValue { font-weight: bold; color: green; margin-top: 15px; }
 </style>
 </head>
 <body>
 
-<div class="card">
-<h2>Terms & Agreement</h2>
-<p>Read aloud. Current chunk is highlighted. Live transcript and status show what the app hears.</p>
+<h1>Voice-Controlled Slider</h1>
+<input type="range" id="slider" min="0" max="100" value="50">
+<p>Slider value: <span id="value">50</span>%</p>
 
-<div id="volumeCircle"></div>
-<div class="read-zone" id="readZone"></div>
-<div id="liveTranscript">Your speech will appear here...</div>
-<div id="statusBox">Status messages will appear here...</div>
-<button id="startBtn">🎤 Start Reading</button>
-<label class="agree"><input type="checkbox" id="agree" disabled> I have read and understood the rules</label>
-</div>
+<button id="startBtn">Start Listening</button>
+<button id="saveBtn">Save Value</button>
+
+<p id="savedValue"></p>
 
 <script>
-document.addEventListener("DOMContentLoaded", () => {
-  const textChunks = [
-    "Please read these rules carefully.",
-    "By using this service, you agree to follow all rules.",
-    "Respect other users.",
-    "Your information may be saved to improve your experience.",
-    "Always be honest and polite.",
-    "Thank you for cooperating."
-  ];
+let audioContext;
+let analyser;
+let microphone;
+let dataArray;
+let slider = document.getElementById('slider');
+let valueDisplay = document.getElementById('value');
+let savedDisplay = document.getElementById('savedValue');
+let running = false;
 
-  const readZone = document.getElementById("readZone");
-  const liveTranscriptDiv = document.getElementById("liveTranscript");
-  const statusBox = document.getElementById("statusBox");
-  let currentChunk = 0;
+async function startListening() {
+    if (running) return;
+    running = true;
 
-  // Create span for each chunk
-  textChunks.forEach((chunk, i)=>{
-    const span = document.createElement("span");
-    span.textContent = chunk + " ";
-    span.className = "chunk";
-    if(i===0) span.classList.add("current");
-    span.id = "chunk-"+i;
-    readZone.appendChild(span);
-  });
-
-  const startBtn = document.getElementById("startBtn");
-  const checkbox = document.getElementById("agree");
-  const volumeCircle = document.getElementById("volumeCircle");
-
-  const SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
-  if(!SpeechRecognition){
-    statusBox.textContent = "Your browser does not support Speech Recognition. Use Chrome.";
-    startBtn.disabled = true;
-    return;
-  }
-
-  let recognition, audioContext, analyser, microphone, dataArray;
-
-  function logStatus(msg){
-    statusBox.textContent = msg;
-  }
-
-  startBtn.addEventListener("click", async () => {
-    logStatus("Start button clicked");
-    startBtn.disabled = true;
-
-    let stream;
-    try {
-      stream = await navigator.mediaDevices.getUserMedia({ audio: true });
-      logStatus("Microphone access granted");
-    } catch(e){
-      logStatus("Microphone access denied: " + e.message);
-      startBtn.disabled = false;
-      return;
-    }
-
-    // Volume circle animation
     audioContext = new (window.AudioContext || window.webkitAudioContext)();
+    const stream = await navigator.mediaDevices.getUserMedia({ audio: true });
     microphone = audioContext.createMediaStreamSource(stream);
+
     analyser = audioContext.createAnalyser();
     analyser.fftSize = 256;
+    const bufferLength = analyser.frequencyBinCount;
+    dataArray = new Uint8Array(bufferLength);
+
     microphone.connect(analyser);
-    dataArray = new Uint8Array(analyser.frequencyBinCount);
 
-    function animateVolume(){
-      analyser.getByteFrequencyData(dataArray);
-      let sum=0; dataArray.forEach(v=>sum+=v);
-      const avg = sum/dataArray.length;
-      const scale = Math.min(1, avg/50);
-      volumeCircle.style.transform = `scale(${scale})`;
-      requestAnimationFrame(animateVolume);
-    }
-    animateVolume();
-
-    // Speech recognition
-    recognition = new SpeechRecognition();
-    recognition.continuous = false;
-    recognition.interimResults = true;
-    recognition.lang='en-US';
-    recognition.maxAlternatives = 1;
-
-    recognition.onstart = () => logStatus("Recognition started");
-
-    recognition.onresult = (event)=>{
-      if(event.results.length > 0){
-        const transcript = Array.from(event.results)
-          .map(r => r[0].transcript)
-          .join(" ")
-          .toLowerCase()
-          .replace(/[^a-z ]/g," ");
-
-        liveTranscriptDiv.textContent = transcript;
-        logStatus("Speech detected");
-        document.body.style.background = "#d0ffd0"; // flash green
-        setTimeout(()=>document.body.style.background="#f2f2f2",100);
-
-        const currentText = textChunks[currentChunk].toLowerCase().replace(/[^a-z ]/g,"");
-        if(transcript.includes(currentText)){
-          const span = document.getElementById("chunk-"+currentChunk);
-          span.classList.remove("current");
-          span.classList.add("read");
-          currentChunk++;
-          if(currentChunk<textChunks.length){
-            document.getElementById("chunk-"+currentChunk).classList.add("current");
-          } else {
-            checkbox.disabled = false;
-            recognition.stop();
-            logStatus("All chunks read! Recognition stopped.");
-          }
+    function updateSlider() {
+        analyser.getByteTimeDomainData(dataArray);
+        let sum = 0;
+        for(let i=0; i<dataArray.length; i++){
+            let val = (dataArray[i] - 128)/128;
+            sum += val * val;
         }
-      }
-    };
+        let rms = Math.sqrt(sum / dataArray.length);
+        let sliderValue = Math.min(100, Math.max(0, Math.floor(rms * 500)));
+        slider.value = sliderValue;
+        valueDisplay.textContent = sliderValue;
 
-    recognition.onerror = (e)=>{
-      logStatus("Recognition error: " + e.error);
-      console.error(e);
-    };
+        requestAnimationFrame(updateSlider);
+    }
 
-    recognition.onend = () => logStatus("Recognition ended");
+    updateSlider();
+}
 
-    recognition.start();
-  });
+document.getElementById('startBtn').addEventListener('click', startListening);
+
+document.getElementById('saveBtn').addEventListener('click', () => {
+    let savedValue = slider.value;
+    savedDisplay.textContent = `Saved value: ${savedValue}% ✅`;
 });
 </script>
 
 </body>
 </html>
-
