--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <input type="range" id="slider" min="0" max="100" value="50">
 <p>Slider value: <span id="value">50</span>%</p>
 
-<button id="startBtn">Start Listening</button>
+<button id="setBtn">Set Volume</button>
 <button id="saveBtn">Save Value</button>
 
 <p id="savedValue"></p>
@@ -31,43 +31,61 @@ let slider = document.getElementById('slider');
 let valueDisplay = document.getElementById('value');
 let savedDisplay = document.getElementById('savedValue');
 let running = false;
+let animationId = null;
 
+// Update slider based on microphone volume
+function updateSlider() {
+    analyser.getByteTimeDomainData(dataArray);
+    let sum = 0;
+    for(let i=0; i<dataArray.length; i++){
+        let val = (dataArray[i] - 128)/128;
+        sum += val * val;
+    }
+    let rms = Math.sqrt(sum / dataArray.length);
+    let sliderValue = Math.min(100, Math.max(0, Math.floor(rms * 500)));
+    slider.value = sliderValue;
+    valueDisplay.textContent = sliderValue;
+
+    animationId = requestAnimationFrame(updateSlider);
+}
+
+// Start/resume listening and slider movement
 async function startListening() {
     if (running) return;
     running = true;
 
-    audioContext = new (window.AudioContext || window.webkitAudioContext)();
-    const stream = await navigator.mediaDevices.getUserMedia({ audio: true });
-    microphone = audioContext.createMediaStreamSource(stream);
+    if (!audioContext) {
+        audioContext = new (window.AudioContext || window.webkitAudioContext)();
+        const stream = await navigator.mediaDevices.getUserMedia({ audio: true });
+        microphone = audioContext.createMediaStreamSource(stream);
 
-    analyser = audioContext.createAnalyser();
-    analyser.fftSize = 256;
-    const bufferLength = analyser.frequencyBinCount;
-    dataArray = new Uint8Array(bufferLength);
+        analyser = audioContext.createAnalyser();
+        analyser.fftSize = 256;
+        const bufferLength = analyser.frequencyBinCount;
+        dataArray = new Uint8Array(bufferLength);
 
-    microphone.connect(analyser);
-
-    function updateSlider() {
-        analyser.getByteTimeDomainData(dataArray);
-        let sum = 0;
-        for(let i=0; i<dataArray.length; i++){
-            let val = (dataArray[i] - 128)/128;
-            sum += val * val;
-        }
-        let rms = Math.sqrt(sum / dataArray.length);
-        let sliderValue = Math.min(100, Math.max(0, Math.floor(rms * 500)));
-        slider.value = sliderValue;
-        valueDisplay.textContent = sliderValue;
-
-        requestAnimationFrame(updateSlider);
+        microphone.connect(analyser);
+    } else if (audioContext.state === 'suspended') {
+        await audioContext.resume();
     }
 
     updateSlider();
 }
 
-document.getElementById('startBtn').addEventListener('click', startListening);
+// Stop slider updates
+function stopSlider() {
+    if (animationId) {
+        cancelAnimationFrame(animationId);
+        animationId = null;
+    }
+    running = false;
+}
+
+// Event listeners
+document.getElementById('setBtn').addEventListener('click', startListening);
 
 document.getElementById('saveBtn').addEventListener('click', () => {
+    stopSlider();
     let savedValue = slider.value;
     savedDisplay.textContent = `Saved value: ${savedValue}% ✅`;
 });
